--- a/src/SP.API/Properties/launchSettings.json
+++ b/src/SP.API/Properties/launchSettings.json
@@ -4,7 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
+      "hotReloadEnabled": true,
       "launchUrl": "scalar/v1",
       "applicationUrl": "http://localhost:5254",
       "environmentVariables": {
@@ -14,7 +15,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
+      "hotReloadEnabled": true,
       "launchUrl": "scalar/v1",
       "applicationUrl": "https://localhost:7186;http://localhost:5254",
       "environmentVariables": {
