--- a/src/SP.API/SP.API.csproj
+++ b/src/SP.API/SP.API.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="Asp.Versioning.WebApi" Version="7.1.0"/>
+        <PackageReference Include="FluentValidation" Version="12.0.0"/>
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
