--- a/src/SP.Application/SP.Application.csproj
+++ b/src/SP.Application/SP.Application.csproj
@@ -11,4 +11,15 @@
         <ProjectReference Include="..\SP.Infrastructure\SP.Infrastructure.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.0"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Reference Include="Microsoft.AspNetCore.Identity">
+            <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\9.0.1\Microsoft.AspNetCore.Identity.dll</HintPath>
+        </Reference>
+    </ItemGroup>
+
 </Project>
