Add role management configuration; update authentication settings to allow lockout for new users; enhance user registration with email existence check; refactor role assignment logic; improve logging for database initialization and role seeding.

--- a/src/SP.API/appsettings.json
+++ b/src/SP.API/appsettings.json
@@ -37,5 +37,11 @@
   },
   "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:5341/ingest/otlp/v1/traces",
   "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
+  "Identity": {
+    "Roles": [
+      "Super Admin",
+      "User"
+    ]
+  },
   "AllowedHosts": "*"
 }
