--- a/backend/src/SP.Application/SP.Application.csproj
+++ b/backend/src/SP.Application/SP.Application.csproj
@@ -12,14 +12,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.0"/>
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0"/>
     </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="Microsoft.AspNetCore.Identity">
-            <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\9.0.1\Microsoft.AspNetCore.Identity.dll</HintPath>
-        </Reference>
-    </ItemGroup>
-
 </Project>
