refactor: update enum namespaces, adjust property initializers, and enhance project configuration

--- a/backend/src/SP.API/appsettings.json
+++ b/backend/src/SP.API/appsettings.json
@@ -39,7 +39,7 @@
   "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
   "Identity": {
     "Roles": [
-      "Super Admin",
+      "Admin",
       "User"
     ]
   },
