--- a/backend/src/SP.Application/SP.Application.csproj
+++ b/backend/src/SP.Application/SP.Application.csproj
@@ -1,20 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
-
     <ItemGroup>
         <ProjectReference Include="..\SP.Domain\SP.Domain.csproj"/>
         <ProjectReference Include="..\SP.Infrastructure\SP.Infrastructure.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.0"/>
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt"/>
     </ItemGroup>
 </Project>
