--- a/backend/Directory.Packages.props
+++ b/backend/Directory.Packages.props
@@ -3,6 +3,8 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     </PropertyGroup>
     <ItemGroup>
+        <PackageVersion Include="Imagekit" Version="5.0.0"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.3.0"/>
         <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.6"/>
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.6"/>
