--- a/backend/src/SP.Application/SP.Application.csproj
+++ b/backend/src/SP.Application/SP.Application.csproj
@@ -6,6 +6,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Imagekit"/>
+        <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
         <PackageReference Include="Microsoft.IdentityModel.Tokens"/>
