--- a/.github/workflows/main_studentperks-dev.yml
+++ b/.github/workflows/main_studentperks-dev.yml
@@ -24,7 +24,7 @@ jobs:
           dotnet-version: '9.0'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build StudentPerks.slnx --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
