--- a/.github/workflows/main_studentperks-dev.yml
+++ b/.github/workflows/main_studentperks-dev.yml
@@ -14,7 +14,7 @@ env:
   AZURE_WEBAPP_NAME: 'studentperks-dev'
   AZURE_WEBAPP_PACKAGE_PATH: './publish'
   DOTNET_VERSION: '9.x'
-  SOLUTION_FILE: 'StudentPerks.slnx'
+  SOLUTION_FILE: 'backend/StudentPerks.slnx'
   API_PROJECT: 'backend/src/SP.API/studentperks-dev'
   PUBLISH_DIR: './publish'
 
