--- a/.github/workflows/main_studentperks-dev.yml
+++ b/.github/workflows/main_studentperks-dev.yml
@@ -15,7 +15,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: './publish'
   DOTNET_VERSION: '9.x'
   SOLUTION_FILE: 'backend/StudentPerks.slnx'
-  API_PROJECT: 'backend/src/SP.API/studentperks-dev'
+  API_PROJECT: 'backend/src/SP.API/SP.API.csproj'
   PUBLISH_DIR: './publish'
 
 jobs:
