--- a/.github/workflows/main_studentperks-dev.yml
+++ b/.github/workflows/main_studentperks-dev.yml
@@ -5,6 +5,14 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'backend/**'
+
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'backend/**'
 
 permissions:
   contents: read
