--- a/backend/src/SP.API/appsettings.Development.json
+++ b/backend/src/SP.API/appsettings.Development.json
@@ -1,8 +1,43 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Warning",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "FromMachineName",
+      "WithThreadId",
+      "WithProcessId"
+    ],
+    "Properties": {
+      "Application": "StudentPerks",
+      "Environment": "Development"
     }
+  },
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:5341/ingest/otlp/v1/traces",
+  "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
+  "Frontend": {
+    "Url": "http://localhost:3000"
   }
 }
