--- a/backend/src/SP.API/appsettings.Production.json
+++ b/backend/src/SP.API/appsettings.Production.json
@@ -4,11 +4,9 @@
       "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Override": {
         "Microsoft": "Warning",
-        "Microsoft.AspNetCore.Authentication": "Warning",
-        "Microsoft.AspNetCore": "Warning",
         "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
         "Microsoft.Hosting.Lifetime": "Information",
         "System": "Warning"
@@ -29,20 +27,5 @@
       "Application": "StudentPerks",
       "Environment": "Production"
     }
-  },
-  "AllowedHosts": "*",
-  "Frontend": {
-    "Url": "http://localhost:3000"
-  },
-  "Jwt": {
-    "Issuer": "StudentPerks",
-    "Audience": "StudentPerks",
-    "AccessTokenExpirationInMinutes": 15,
-    "RefreshTokenExpirationInDays": 7
-  },
-  "Identity": {
-    "Roles": [
-      "Admin"
-    ]
   }
 }
