feat: Enhance production configuration with error handling and role seeding

--- a/backend/src/SP.API/appsettings.Production.json
+++ b/backend/src/SP.API/appsettings.Production.json
@@ -1,31 +1,47 @@
 {
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.Console"
-    ],
-    "MinimumLevel": {
-      "Default": "Warning",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
-        "Microsoft.Hosting.Lifetime": "Information",
-        "System": "Warning"
+  "UseHttpsRedirection": true,
+  "ForwardedHeaders": {
+    "ForwardedHeaders": "XForwardedFor,XForwardedProto",
+    "KnownNetworks": [],
+    "KnownProxies": []
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8080"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:8443"
       }
     },
-    "WriteTo": [
-      {
-        "Name": "Console"
+    "Serilog": {
+      "Using": [
+        "Serilog.Sinks.Console"
+      ],
+      "MinimumLevel": {
+        "Default": "Debug",
+        "Override": {
+          "Microsoft": "Warning",
+          "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
+          "Microsoft.Hosting.Lifetime": "Information",
+          "System": "Warning"
+        }
+      },
+      "WriteTo": [
+        {
+          "Name": "Console"
+        }
+      ],
+      "Enrich": [
+        "FromLogContext",
+        "FromMachineName",
+        "WithThreadId",
+        "WithProcessId"
+      ],
+      "Properties": {
+        "Application": "StudentPerks",
+        "Environment": "Production"
       }
-    ],
-    "Enrich": [
-      "FromLogContext",
-      "FromMachineName",
-      "WithThreadId",
-      "WithProcessId"
-    ],
-    "Properties": {
-      "Application": "StudentPerks",
-      "Environment": "Production"
     }
   }
 }
