--- a/backend/src/SP.API/appsettings.Development.json
+++ b/backend/src/SP.API/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Serilog.Sinks.Seq"
     ],
     "MinimumLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
@@ -39,9 +39,6 @@
   "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
   "Frontend": {
     "Url": "http://localhost:3000"
-  },
-  "ConnectionStrings": {
-    "SpDbConnection": "Host=ep-jolly-king-a8g7d7k7-pooler.eastus2.azure.neon.tech; Database=studentperks; Username=studentperks_owner; Password=npg_HkQ63sgvpRTJ; SSL Mode=VerifyFull; Channel Binding=Require;"
   },
   "Identity": {
     "Roles": [
