--- a/backend/src/SP.API/appsettings.Production.json
+++ b/backend/src/SP.API/appsettings.Production.json
@@ -19,7 +19,7 @@
         "Serilog.Sinks.Console"
       ],
       "MinimumLevel": {
-        "Default": "Debug",
+        "Default": "Warning",
         "Override": {
           "Microsoft": "Warning",
           "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
