Remove sensitive connection string from appsettings.Development.json

--- a/backend/src/SP.API/appsettings.Development.json
+++ b/backend/src/SP.API/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Serilog.Sinks.Seq"
     ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
@@ -39,10 +39,5 @@
   "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
   "Frontend": {
     "Url": "http://localhost:3000"
-  },
-  "Identity": {
-    "Roles": [
-      "Admin"
-    ]
   }
 }
