feat: Update appsettings.json to include connection strings and JWT configuration

--- a/backend/src/SP.API/appsettings.json
+++ b/backend/src/SP.API/appsettings.json
@@ -31,18 +31,24 @@
     }
   },
   "AllowedHosts": "*",
-  "Frontend": {
-    "Url": "http://localhost:3000"
-  },
-  "Jwt": {
-    "Issuer": "StudentPerks",
-    "Audience": "StudentPerks",
-    "AccessTokenExpirationInMinutes": 15,
-    "RefreshTokenExpirationInDays": 7
-  },
   "Identity": {
     "Roles": [
       "Admin"
     ]
+  },
+  "ConnectionStrings": {
+    "SpDbConnection": "SECRET"
+  },
+  "Jwt": {
+    "Key": "SECRET",
+    "Issuer": "SECRET",
+    "Audience": "SECRET",
+    "AccessTokenExpirationInMinutes": "",
+    "RefreshTokenExpirationInDays": ""
+  },
+  "ImageKit": {
+    "PublicKey": "SECRET",
+    "PrivateKey": "SECRET",
+    "UrlEndpoint": "SECRET"
   }
 }
