--- a/backend/src/SP.API/appsettings.Development.json
+++ b/backend/src/SP.API/appsettings.Development.json
@@ -5,7 +5,7 @@
       "Serilog.Sinks.Seq"
     ],
     "MinimumLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
