--- a/.github/workflows/studentperks-dev.yml
+++ b/.github/workflows/studentperks-dev.yml
@@ -5,8 +5,6 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "backend/**"
 
 permissions:
   contents: read
@@ -16,8 +14,8 @@ env:
   AZURE_WEBAPP_NAME: 'studentperks-dev'
   AZURE_WEBAPP_PACKAGE_PATH: './publish'
   DOTNET_VERSION: '9.x'
-  SOLUTION_FILE: 'backend/StudentPerks.slnx'
-  API_PROJECT: 'backend/src/SP.API/SP.API.csproj'
+  SOLUTION_FILE: 'StudentPerks.slnx'
+  API_PROJECT: 'src/SP.API/SP.API.csproj'
   PUBLISH_DIR: './publish'
 
 jobs:
