feat: Update configuration files for improved health checks and HTTPS handling

--- a/src/SP.API/appsettings.Development.json
+++ b/src/SP.API/appsettings.Development.json
@@ -39,5 +39,6 @@
   "OTEL_EXPORTER_OTLP_PROTOCOL": "http/protobuf",
   "Frontend": {
     "Url": "http://localhost:3000"
-  }
+  },
+    "AllowedHosts": "*"
 }
