--- a/src/SP.API/Properties/launchSettings.json
+++ b/src/SP.API/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "hotReloadEnabled": true,
       "launchUrl": "scalar/v1",
       "applicationUrl": "http://localhost:5254;",
@@ -15,7 +15,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "hotReloadEnabled": true,
       "launchUrl": "scalar/v1",
       "applicationUrl": "https://localhost:7185;http://localhost:5254",
